# Niche

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  SUPERVISOR.md  TODOS.md  claude_wave_feed.md  claude_wave_feed_contract.md  skills-lock.json
apps/api/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
apps/api/.omc/state/: last-tool-error.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260313_0001_session_highlight_slice.py  20260317_0001_feed_posts.py  20260322_0001_profiles.py  20260322_0002_blog_posts.py  20260322_0003_quiz_tables.py  20260329_0001_session_bundle_session_ids.py  20260329_0002_enable_rls.py  938501b9a3f2_drop_deprecated_add_interest_and_log.py
apps/api/src/: config.py  db.py  error_codes.py  exceptions.py  main.py  security.py
apps/api/src/ai/: base.py
apps/api/src/dependencies/: repositories.py
apps/api/src/middleware/: request_id.py
apps/api/src/models/: base.py  blog_post.py  blog_post_table.py  feed_post.py  highlight.py  highlight_tables.py  interest.py  interest_table.py  log.py  log_table.py  profile.py  profile_table.py  quiz.py  quiz_attempt.py  quiz_job.py  quiz_tables.py  session.py  session_bundle.py  session_note.py  session_tables.py
apps/api/src/repositories/: blog_post_repo.py  feed_post_repo.py  highlight_repo.py  interest_repo.py  profile_repo.py  quiz_job_repo.py  session_bundle_repo.py  session_repo.py
apps/api/src/routers/: __init__.py  archive.py  blog_posts.py  feed.py  health.py  highlights.py  interests.py  jitter.py  profiles.py  quizzes.py  session_bundles.py  sessions.py  (+1 more)
(+235 files in other folders)
